# bean_importers

./: LICENSE  README.md  pyproject.toml  requirements.txt
beangulp_importers/: datatypes.py  file_utils.py  reader.py  text_utils.py  transaction_builder.py
beangulp_importers/importers/: revolut_banking.py
beangulp_importers/libreader/: identifiers.py
src/beangulp_importers/: datatypes.py  file_utils.py  string_utils.py
src/beangulp_importers/base_importer/: banking_importer.py
src/beangulp_importers/descriptors/: amount.py  date.py  file.py  payee_narration.py  protocols.py  transaction_type.py
src/beangulp_importers/importers/: argenta_banking.py  ing_banking.py  revolut_banking.py
src/beangulp_importers/reader/: reader.py
src/importers/: argenta_banking.py  revolut_banking.py
