[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bean-importers"
version = "0.0.10"
description = "Beangulp compatible beancount importers"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE"}
dependencies = [
    "beancount==3.1.0",
    "beangulp==0.2.0",
    "openpyxl>=3.1.5",
    "petl>=1.7.15",
]
